[project]
name = "pyhubio"
version = "1.3"
description = "A small library to communicate with AXI4 and AXI4-Stream hubs"
authors = [
    {name = "Pavel Demin"},
]
dependencies = ["libusb1", "numpy"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/pavel-demin/pyhubio"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
